--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "cucumber-coverage",
     "version": "1.0.0-rc.1",
     "description": "Coverage reporting for cucumber with grunt",
-    "main": "index.js",
+    "main": "gruntfile.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/sysen-limited/cucumber-coverage.git"
@@ -17,5 +17,15 @@
     "bugs": {
         "url": "https://github.com/sysen-limited/cucumber-coverage/issues"
     },
-    "homepage": "https://github.com/sysen-limited/cucumber-coverage#readme"
+    "homepage": "https://github.com/sysen-limited/cucumber-coverage#readme",
+    "dependencies": {
+        "cucumber": "1.3.1",
+        "istanbul": "0.4.5"
+    },
+    "devDependencies": {
+        "chai": "3.5.0",
+        "grunt": "1.0.1",
+        "grunt-eslint": "19.0.0",
+        "load-grunt-tasks": "3.5.2"
+    }
 }
