--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "cucumber-coverage",
+    "name": "grunt-cucumber-coverage",
     "version": "1.0.0-rc.1",
     "description": "Coverage reporting for cucumber with grunt",
     "main": "gruntfile.js",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/sysen-limited/cucumber-coverage.git"
+        "url": "git+https://github.com/sysen-limited/grunt-cucumber-coverage.git"
     },
     "keywords": [
         "coverage",
@@ -15,9 +15,9 @@
     "author": "Sysen Limited",
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/sysen-limited/cucumber-coverage/issues"
+        "url": "https://github.com/sysen-limited/grunt-cucumber-coverage/issues"
     },
-    "homepage": "https://github.com/sysen-limited/cucumber-coverage#readme",
+    "homepage": "https://github.com/sysen-limited/grunt-cucumber-coverage#readme",
     "dependencies": {
         "cucumber": "1.3.1",
         "istanbul": "0.4.5"
