--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "chai": "3.5.0",
         "grunt": "1.0.1",
+        "grunt-contrib-clean": "1.0.0",
         "grunt-eslint": "19.0.0",
         "load-grunt-tasks": "3.5.2"
     }
