--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "grunt-cucumber-coverage",
-    "version": "1.0.0-rc.6",
+    "version": "1.0.0",
     "description": "Coverage reporting for cucumber with grunt",
     "main": "gruntfile.js",
     "scripts": {
